# omega

./: .clang-format  .gitignore  CMakeLists.txt  cmake_export  readme.md
.cache/clangd/index/: Server.hpp.26A35F5226534AC2.idx  main.cpp.3F8BDD5B9445EF97.idx
include/: SERVER.hpp  Server.hpp
src/: main.cpp  server.cpp
